# typing-django-demo

./: .venv  README.md  pyproject.toml
demo/demo/demo/: settings.py
demo/example/: models.py
