[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Thomas Grainger <thomas.grainger@coefficientai.onmicrosoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django-stubs = "^4.2.6"
django = "^4.2.7"
mypy = "1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "demo.settings"
